[gd_scene load_steps=65 format=2]

[ext_resource path="res://Assets/Captain/CaptainSprites/09-Idle Sword/Idle Sword 01.png" type="Texture" id=1]
[ext_resource path="res://Assets/Captain/CaptainSprites/09-Idle Sword/Idle Sword 03.png" type="Texture" id=2]
[ext_resource path="res://Assets/Captain/CaptainSprites/09-Idle Sword/Idle Sword 02.png" type="Texture" id=3]
[ext_resource path="res://Assets/Captain/CaptainSprites/09-Idle Sword/Idle Sword 04.png" type="Texture" id=4]
[ext_resource path="res://Assets/Captain/CaptainSprites/11-Jump Sword/Jump Sword 01.png" type="Texture" id=5]
[ext_resource path="res://Assets/Captain/CaptainSprites/09-Idle Sword/Idle Sword 05.png" type="Texture" id=6]
[ext_resource path="res://Assets/Captain/CaptainSprites/11-Jump Sword/Jump Sword 02.png" type="Texture" id=7]
[ext_resource path="res://Assets/Captain/CaptainSprites/11-Jump Sword/Jump Sword 03.png" type="Texture" id=8]
[ext_resource path="res://Assets/Captain/CaptainSprites/10-Run Sword/Run Sword 06.png" type="Texture" id=9]
[ext_resource path="res://Assets/Captain/CaptainSprites/10-Run Sword/Run Sword 02.png" type="Texture" id=10]
[ext_resource path="res://Assets/Captain/CaptainSprites/10-Run Sword/Run Sword 01.png" type="Texture" id=11]
[ext_resource path="res://Assets/Captain/CaptainSprites/10-Run Sword/Run Sword 05.png" type="Texture" id=12]
[ext_resource path="res://Assets/Captain/CaptainSprites/11-Jump Sword/sonido_salto.mp3" type="AudioStream" id=13]
[ext_resource path="res://Assets/Captain/CaptainSprites/12-Fall Sword/Fall Sword 01.png" type="Texture" id=14]
[ext_resource path="res://Assets/Captain/CaptainSprites/10-Run Sword/Run Sword 04.png" type="Texture" id=15]
[ext_resource path="res://Assets/Captain/CaptainSprites/10-Run Sword/Run Sword 03.png" type="Texture" id=16]
[ext_resource path="res://Assets/Captain/Player.gd" type="Script" id=17]
[ext_resource path="res://Assets/Captain/CaptainSprites/15-Attack 1/Attack 1 02.png" type="Texture" id=18]
[ext_resource path="res://Assets/Captain/CaptainSprites/15-Attack 1/Attack 1 03.png" type="Texture" id=19]
[ext_resource path="res://Assets/Captain/CaptainSprites/16-Attack 2/Attack 2 02.png" type="Texture" id=20]
[ext_resource path="res://Assets/Captain/CaptainSprites/17-Attack 3/Attack 3 01.png" type="Texture" id=21]
[ext_resource path="res://Assets/Captain/CaptainSprites/15-Attack 1/Attack 1 01.png" type="Texture" id=22]
[ext_resource path="res://Assets/Captain/CaptainSprites/17-Attack 3/Attack 3 02.png" type="Texture" id=23]
[ext_resource path="res://Assets/Captain/CaptainSprites/17-Attack 3/Attack 3 03.png" type="Texture" id=24]
[ext_resource path="res://Assets/Captain/CaptainSprites/16-Attack 2/Attack 2 01.png" type="Texture" id=25]
[ext_resource path="res://Assets/Captain/CaptainSprites/16-Attack 2/Attack 2 03.png" type="Texture" id=26]
[ext_resource path="res://Assets/Captain/CaptainSprites/15-Attack 1/Sword.ogg" type="AudioStream" id=27]
[ext_resource path="res://Assets/Captain/CaptainSprites/20-Throw Sword/Throw Sword 02.png" type="Texture" id=28]
[ext_resource path="res://Assets/Captain/CaptainSprites/20-Throw Sword/Throw Sword 03.png" type="Texture" id=29]
[ext_resource path="res://Assets/Captain/CaptainSprites/20-Throw Sword/Throw Sword 01.png" type="Texture" id=30]
[ext_resource path="res://Assets/Captain/Sword/Shoot.tscn" type="PackedScene" id=31]
[ext_resource path="res://Assets/Captain/Sword/Sound/Hit.ogg" type="AudioStream" id=32]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "attack1"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 22 ), ExtResource( 18 ), ExtResource( 19 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "attack2"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 25 ), ExtResource( 20 ), ExtResource( 26 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "attack3"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 21 ), ExtResource( 23 ), ExtResource( 24 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "fall"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 14 ) ]
}

[sub_resource type="Animation" id=37]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.752941, 0.00392157, 0.00392157, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 6 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "jump"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 7 ), ExtResource( 8 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 11 ), ExtResource( 10 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 9 ) ]
}

[sub_resource type="Animation" id=36]
resource_name = "throw"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 30 ), ExtResource( 28 ), ExtResource( 29 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "attack1"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "attack2"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "attack3"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "fall"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "run"

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=23]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=30]
states/attack1/node = SubResource( 12 )
states/attack1/position = Vector2( 313.815, 553.512 )
states/attack2/node = SubResource( 32 )
states/attack2/position = Vector2( 552.262, 553.369 )
states/attack3/node = SubResource( 13 )
states/attack3/position = Vector2( 803.735, 555.16 )
states/fall/node = SubResource( 14 )
states/fall/position = Vector2( 803.494, 188.191 )
states/idle/node = SubResource( 15 )
states/idle/position = Vector2( 551.842, 367.246 )
states/jump/node = SubResource( 16 )
states/jump/position = Vector2( 555.719, 188.042 )
states/run/node = SubResource( 17 )
states/run/position = Vector2( 804.531, 367.444 )
transitions = [ "idle", "attack1", SubResource( 18 ), "attack1", "idle", SubResource( 19 ), "attack3", "idle", SubResource( 23 ), "idle", "jump", SubResource( 24 ), "idle", "run", SubResource( 25 ), "idle", "fall", SubResource( 26 ), "run", "idle", SubResource( 27 ), "fall", "idle", SubResource( 28 ), "jump", "fall", SubResource( 29 ), "attack1", "attack2", SubResource( 33 ), "attack2", "attack3", SubResource( 34 ), "attack2", "idle", SubResource( 35 ) ]
start_node = "idle"
graph_offset = Vector2( 0, 167.4 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=31]

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.0
height = 8.0

[node name="Player" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 17 )
Shoot = ExtResource( 31 )

[node name="Particles" type="CPUParticles2D" parent="."]
position = Vector2( 0, 10 )
emitting = false
amount = 3
lifetime = 0.35
speed_scale = 1.6
randomness = 0.2
local_coords = false
gravity = Vector2( 0, -98 )
angular_velocity = 4.0
linear_accel = 40.0
scale_amount = 4.0
scale_amount_random = 0.8

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/attack1 = SubResource( 4 )
anims/attack2 = SubResource( 5 )
anims/attack3 = SubResource( 6 )
anims/fall = SubResource( 7 )
anims/hit = SubResource( 37 )
anims/idle = SubResource( 8 )
anims/jump = SubResource( 9 )
anims/run = SubResource( 10 )
anims/throw = SubResource( 36 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 30 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 31 )

[node name="Collision2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Sounds" type="Node" parent="."]

[node name="jump" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 13 )
volume_db = -20.0

[node name="attack" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 27 )
volume_db = -20.0

[node name="hit" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 32 )
volume_db = -10.0

[node name="Raycast" type="Position2D" parent="."]

[node name="ShootSpawn" type="Position2D" parent="Raycast"]
position = Vector2( 10, 0 )

[node name="Wall" type="RayCast2D" parent="Raycast"]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( 12, 0 )

[node name="Hit" type="RayCast2D" parent="Raycast"]
position = Vector2( 0, 5 )
enabled = true
cast_to = Vector2( 28, 0 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
